# MatrixLibrary

./: .gitignore  CMakeLists.txt  README.md
apps/Test/: CMakeLists.txt  main.cpp
cmake/: CheckFlags.cmake  CpuDetect.cmake
cpu/: Cpu.cpp  Cpu.h
inc/MatrixLibrary/Core/: Platform.h  PlatformLinux.h  PlatformWindows.h
inc/MatrixLibrary/Math/: MathPrerequisites.h  Matrix.h
inc/MatrixLibrary/Math/Dense/: DenseMatrix.h  DenseMatrixHelper.h  DynamicMatrix.h  StaticMatrix.h
inc/MatrixLibrary/Math/Expressions/: DMAssign.h  DMDMAdd.h  DMDMMul.h  DMSet1.h  DMSetZero.h  MatrixExpression.h
inc/MatrixLibrary/Math/SIMD/: Add.h  Broadcast.h  Div.h  FMA.h  Mul.h  SIMD.h  Sub.h
inc/MatrixLibrary/Memory/: AlignedAlloc.h
inc/MatrixLibrary/QTL/: Boolean.h  Comparison.h  Constant.h  EnableIf.h  Type.h  TypeList.h
inc/MatrixLibrary/Utility/: Benchmark.h  Cpu.h  DoNotOptimizeAway.h  FunctionTypeTraits.h
